# mediawiki-contributions-report

./: .gitignore  gui.py  pyproject.toml
core/: crawler.py  gui.py  utils.py
